# templates

./: .gitignore  README.md
dotnet/: default.nix  flake.nix
kotlin/: .gitignore  copier.yml  default.nix  flake.nix  settings.gradle.kts  settings.gradle.kts.jinja
kotlin/app/: build.gradle.kts
kotlin/app/src/main/kotlin/app/: App.kt
kotlin/app/src/test/kotlin/app/: AppTest.kt
pulumi/: .gitignore  .pre-commit-config.yaml  Pulumi.yaml.jinja  copier.yml  flake.nix  index.ts  package.json.jinja  tsconfig.json
python3/: .envrc  .pre-commit-config.yaml  copier.yml  default.nix  flake.nix  pyproject.toml  pyproject.toml.jinja
python3-numpy/: .flake8  .gitignore  .pre-commit-config.yaml  flake.nix  pyproject.toml
python3/.github/workflows/: lint.yml
terraform/: .gitignore  .pre-commit-config.yaml  .terraform-docs.yml  .terraform.lock.hcl  .tool-versions  README.md  copier.yml  flake.nix  providers.tf  providers.tf.jinja  versions.tf
terraform/.github/workflows/: lint.yml
terraform/nix/: overlay.nix
zig/: build.zig  build.zig.jinja  build.zig.zon  build.zig.zon.jinja  copier.yml  flake.nix
zig/src/: main.zig
