[tool.poetry]
name = "python3-template"
version = "0.1.0"
description = "This a python3 template project"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
flake8 = "^3.9.2"
flake8-bugbear = "^21.4.3"
mypy = "^0.910"
isort = "^5.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
